--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "gl-noise": "^1.6.1",
     "react": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "sentiment": "^5.0.2",
     "three": "^0.158.0",
     "three-custom-shader-material": "^5.4.0"
