--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "gl-noise": "^1.6.1",
+    "openai": "^4.73.1",
     "react": "^18.2.0",
     "react-scripts": "^5.0.1",
     "sentiment": "^5.0.2",
