--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-scripts": "^5.0.1",
     "sentiment": "^5.0.2",
+    "simplex-noise": "^4.0.3",
     "three": "^0.158.0",
     "three-custom-shader-material": "^5.4.0"
   },
